--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,7 @@ Description: Answers for Lab06
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.1.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
