--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,6 @@ Encoding: UTF-8
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 2.1.0)
 VignetteBuilder: knitr
